--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,28 +7,36 @@
 		"context": "..",
 		// Update 'VARIANT' to pick an Debian / Ubuntu OS version: debian-11, debian-10, debian-9, ubuntu-21.04, ubuntu-20.04, ubuntu-18.04
 		// Use Debian 11, Debian 9, Ubuntu 18.04 or Ubuntu 21.04 on local arm64/Apple Silicon
-		"args": { "VARIANT": "ubuntu-18.04" }
+		"args": {
+			"VARIANT": "ubuntu-18.04"
+		}
 	},
-	"runArgs": ["--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
-
+	"runArgs": [
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
+		"seccomp=unconfined",
+		"--network=nano-private-network"
+	],
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
-
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ms-vscode.cpptools",
 		"ms-vscode.cmake-tools"
 	],
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "gcc -v",
-
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode",
+	// "remoteUser": "root",
 	"features": {
 		"git": "os-provided"
-	}
+	},
+	"mounts": [
+		"source=nano-node-devc,target=/root/,type=volume",
+		"type=tmpfs,destination=/root/Nano/",
+		"source=${localWorkspaceFolder}/.devcontainer/node-config/config-node.toml,target=/root/Nano/config-node.toml,type=bind,consistency=cached",
+		"source=${localWorkspaceFolder}/.devcontainer/node-config/config-rpc.toml,target=/root/Nano/config-rpc.toml,type=bind,consistency=cached"
+	]
 }
