--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "root",
 	"features": {
-		"git": "os-provided"
+		"git": "os-provided",
+		"docker-from-docker": "20.10"
 	},
 	"mounts": [
 		"source=nano-node-devc,target=/root/,type=volume",
