--- a/nano/secure/CMakeLists.txt
+++ b/nano/secure/CMakeLists.txt
@@ -64,7 +64,8 @@ add_library(
   store/confirmation_height_store_partial.hpp
   store/unchecked_store_partial.hpp
   store/final_vote_store_partial.hpp
-  store/version_store_partial.hpp)
+  store/version_store_partial.hpp
+  store/vote_storage_store_partial.hpp)
 
 target_link_libraries(
   secure
