--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -138,6 +138,8 @@ add_library(
   transport/udp.cpp
   vote_processor.hpp
   vote_processor.cpp
+  vote_storage.hpp
+  vote_storage.cpp
   voting.hpp
   voting.cpp
   wallet.hpp
