--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -140,6 +140,8 @@ add_library(
   unchecked_map.hpp
   vote_processor.hpp
   vote_processor.cpp
+  vote_storage.hpp
+  vote_storage.cpp
   voting.hpp
   voting.cpp
   wallet.hpp
