--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -47,7 +47,8 @@ add_library(
   lmdbconfig.cpp
   locks.hpp
   locks.cpp
-  logger_mt.hpp
+  logger.hpp
+  logger.cpp
   memory.hpp
   memory.cpp
   numbers.hpp
