Move `recently_confirmed` to separate class file

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -145,6 +145,8 @@ add_library(
   prioritization.hpp
   node_pow_server_config.hpp
   node_pow_server_config.cpp
+  recently_confirmed.hpp
+  recently_confirmed.cpp
   repcrawler.hpp
   repcrawler.cpp
   request_aggregator.hpp
