--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,19 +55,17 @@ jobs:
       RELEASE: ${{ matrix.RELEASE }}
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
-      - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+      - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-      - name: Fetch Deps
-        run: ci/actions/linux/install_deps.sh
       - name: Build Tests
-        run: docker run -e TEST_USE_ROCKSDB  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace && ./ci/build-ci.sh /usr/lib/x86_64-linux-gnu/cmake/Qt5"
+        run: docker build -f docker/tests/Dockerfile -t nano-tests .
       - name: Run Tests lmdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 0 }}
-        run: docker run  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
+        run: docker run nano-tests
       - name: Run Tests rocksdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 1 }}
-        run: docker run -e TEST_USE_ROCKSDB -e DEADLINE_SCALE_FACTOR=2  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
+        run: docker run -e TEST_USE_ROCKSDB -e DEADLINE_SCALE_FACTOR=2 nano-tests
 
   windows_test:
     name: Windows Unit Tests [TEST_USE_ROCKSDB=${{ matrix.TEST_USE_ROCKSDB }}]
