--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(
   network.cpp
   network_filter.cpp
   node.cpp
+  object_stream.cpp
   processing_queue.cpp
   processor_service.cpp
   peer_container.cpp
