Object streaming WIP

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(
   ledger_walker.cpp
   locks.cpp
   logger.cpp
+        logging.cpp
   message.cpp
   message_parser.cpp
   memory_pool.cpp
