--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -48,12 +48,12 @@ add_library(
   locks.hpp
   locks.cpp
   logger_mt.hpp
-        logging.hpp
+  logging.hpp
   memory.hpp
   memory.cpp
   numbers.hpp
   numbers.cpp
-        object_stream.hpp
+  object_stream.hpp
   observer_set.hpp
   optional_ptr.hpp
   processing_queue.hpp
@@ -95,6 +95,7 @@ target_link_libraries(
   ipc_flatbuffers_lib
   ${CRYPTOPP_LIBRARY}
   ${CMAKE_DL_LIBS}
+  spdlog::spdlog
   Boost::asio
   Boost::circular_buffer
   Boost::dll
