--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -8,27 +8,33 @@ env:
 
 jobs:
   osx_test:
-    name: OSX unit tests [TEST_USE_ROCKSDB=${{ matrix.TEST_USE_ROCKSDB }}]
+    name: macOS [${{ matrix.BACKEND }}]
     strategy:
       fail-fast: false
       matrix:
-        TEST_USE_ROCKSDB: [0, 1]
+        BACKEND: [lmdb, rocksdb]
         RELEASE:
           - ${{ startsWith(github.ref, 'refs/tags/') }}
     env:
       BOOST_ROOT: /tmp/boost
-      TEST_USE_ROCKSDB: ${{ matrix.TEST_USE_ROCKSDB }}
+      BACKEND: ${{ matrix.BACKEND }}
+      TEST_USE_ROCKSDB: ${{ matrix.BACKEND == 'rocksdb' && '1' || '0' }}
       RELEASE: ${{ matrix.RELEASE }}
-    runs-on: macOS-11
+    runs-on: macos-11
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 #v3.1.0
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           submodules: "recursive"
+          fetch-depth: 0 # needed for git-restore-mtime
+
       - name: Fetch Deps
         run: TEST=1 ci/actions/osx/install_deps.sh
+
       - name: Build Tests
         run: ci/build-ci.sh "/tmp/qt/lib/cmake/Qt5";
+
       - name: Run Tests lmdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 0 }}
         run: cd build && sudo TEST_USE_ROCKSDB=$TEST_USE_ROCKSDB ../ci/test.sh .
@@ -39,61 +45,81 @@ jobs:
         run: cd build && sudo TEST_USE_ROCKSDB=$TEST_USE_ROCKSDB ../ci/test.sh .
 
   linux_test:
-    name: Linux Unit Tests [TEST_USE_ROCKSDB=${{ matrix.TEST_USE_ROCKSDB }} - COMPILER=${{ matrix.COMPILER }}]
+    name: Linux [${{ matrix.BACKEND }}-${{ matrix.COMPILER }}]
     timeout-minutes: 90
     strategy:
       fail-fast: false
       matrix:
-        TEST_USE_ROCKSDB: [0, 1]
+        BACKEND: [lmdb, rocksdb]
         COMPILER: [gcc, clang]
         RELEASE:
           - ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-20.04
     env:
       COMPILER: ${{ matrix.COMPILER }}
-      TEST_USE_ROCKSDB: ${{ matrix.TEST_USE_ROCKSDB }}
+      BACKEND: ${{ matrix.BACKEND }}
+      TEST_USE_ROCKSDB: ${{ matrix.BACKEND == 'rocksdb' && '1' || '0' }}
       RELEASE: ${{ matrix.RELEASE }}
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 #v3.1.0
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           submodules: "recursive"
+          fetch-depth: 0 # needed for git-restore-mtime
+
+      - name: Restore Timestamps
+        run: >
+          sudo apt-get install -y git-restore-mtime && 
+          git restore-mtime &&
+          git submodule foreach --recursive 'git restore-mtime'
+
       - name: Fetch Deps
         run: ci/actions/linux/install_deps.sh
+
+      - name: Cache Build
+        uses: actions/cache@v3
+        with:
+          path: build
+          key: ${{ runner.os }}-${{ env.COMPILER }}-${{ env.BACKEND }}-build-cache
+
       - name: Build Tests
-        run: docker run -e TEST_USE_ROCKSDB  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace && ./ci/build-ci.sh /usr/lib/x86_64-linux-gnu/cmake/Qt5"
+        run: docker run -e TEST_USE_ROCKSDB -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace && ./ci/build-ci.sh /usr/lib/x86_64-linux-gnu/cmake/Qt5"
+
       - name: Run Tests lmdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 0 }}
-        run: docker run  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
+        run: docker run -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
       - name: Run Tests rocksdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 1 }}
-        run: docker run -e TEST_USE_ROCKSDB -e DEADLINE_SCALE_FACTOR=2  -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
+        run: docker run -e TEST_USE_ROCKSDB -e DEADLINE_SCALE_FACTOR=2 -e RELEASE -v ${PWD}:/workspace nanocurrency/nano-env:${{ matrix.COMPILER }} /bin/bash -c "cd /workspace/build && ../ci/test.sh ."
 
   windows_test:
-    name: Windows Unit Tests [TEST_USE_ROCKSDB=${{ matrix.TEST_USE_ROCKSDB }}]
+    name: Windows [TEST_USE_ROCKSDB=${{ matrix.TEST_USE_ROCKSDB }}]
     timeout-minutes: 120
     strategy:
       fail-fast: false
       matrix:
-        TEST_USE_ROCKSDB: [0, 1]
+        BACKEND: [lmdb, rocksdb]
         RELEASE:
           - ${{ startsWith(github.ref, 'refs/tags/') }}
-        exclude:
-          - RELEASE: true
-            TEST_USE_ROCKSDB: 1
     runs-on: windows-latest
     env:
-      TEST_USE_ROCKSDB: ${{ matrix.TEST_USE_ROCKSDB }}
+      BACKEND: ${{ matrix.BACKEND }}
+      TEST_USE_ROCKSDB: ${{ matrix.BACKEND == 'rocksdb' && '1' || '0' }}
       RELEASE: ${{ matrix.RELEASE }}
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 #v3.1.0
+      - uses: actions/checkout@v3
         with:
           submodules: "recursive"
+          fetch-depth: 0 # needed for git-restore-mtime
+
       - name: Windows Defender
         run: ci/actions/windows/disable_windows_defender.ps1
+
       - name: Fetch Deps
         run: ci/actions/windows/install_deps.ps1
+
       - name: Run Tests lmdb
         if: ${{ matrix.TEST_USE_ROCKSDB == 0 }}
         run: ci/actions/windows/build.ps1
