--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -134,12 +134,10 @@ jobs:
         run: ci/actions/windows/install_deps.ps1
 
       - name: Build Tests
-        run: ci/build-ci.sh
-        shell: bash
+        run: ci/actions/windows/build.ps1
 
       - name: Run Tests [TEST_USE_ROCKSDB=${{ env.TEST_USE_ROCKSDB }}]
-        run: cd build && sudo TEST_USE_ROCKSDB=$TEST_USE_ROCKSDB ../ci/test.sh .
-        shell: bash
+        run: cd build && ../ci/actions/windows/test.ps1
         env:
           DEADLINE_SCALE_FACTOR: ${{ env.TEST_USE_ROCKSDB == 1 && '2' || '1' }}
 
