--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,13 @@ set(NANO_ASIO_HANDLER_TRACKING
 set(NANO_ROCKSDB_TOOLS
     OFF
     CACHE BOOL "")
+set(NANO_IGNORE_SIGNATURES
+    OFF
+    CACHE BOOL "")
+
+if(NANO_IGNORE_SIGNATURES)
+  add_definitions(-DNANO_IGNORE_SIGNATURES)
+endif()
 
 option(NANO_STACKTRACE_BACKTRACE
        "Use BOOST_STACKTRACE_USE_BACKTRACE in stacktraces, for POSIX" OFF)
