Move stats test to a dedicated file

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(
   processor_service.cpp
   peer_container.cpp
   scheduler_buckets.cpp
+  stats.cpp
   request_aggregator.cpp
   signal_manager.cpp
   socket.cpp
