--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -82,6 +82,7 @@ add_library(
   stats.cpp
   stats_enums.hpp
   stats_enums.cpp
+  stats_sinks.hpp
   stream.hpp
   thread_pool.hpp
   thread_pool.cpp
