Limit build parallelism for github runners

--- a/.github/workflows/code_sanitizers.yml
+++ b/.github/workflows/code_sanitizers.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Build Tests
         id: build
         run: ci/build-tests.sh
+        env:
+          MAX_BUILD_PARALLELISM: 2 # Limit parallelism to avoid OOM during compilation
 
       - name: Core Tests
         if: steps.build.outcome == 'success' && (success() || failure())
