--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -163,6 +163,10 @@ add_library(
   transport/socket.cpp
   transport/tcp.hpp
   transport/tcp.cpp
+  transport/tcp_channel.hpp
+  transport/tcp_channel.cpp
+  transport/tcp_channels.hpp
+  transport/tcp_channels.cpp
   transport/tcp_listener.hpp
   transport/tcp_listener.cpp
   transport/tcp_server.hpp
