--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(
   difficulty.cpp
   distributed_work.cpp
   election.cpp
+  election_container.cpp
   election_scheduler.cpp
   enums.cpp
   epochs.cpp
