--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -22,8 +22,6 @@ add_library(
   bandwidth_limiter.cpp
   blockprocessor.hpp
   blockprocessor.cpp
-  bootstrap_weights_beta.hpp
-  bootstrap_weights_live.hpp
   bootstrap/block_deserializer.hpp
   bootstrap/block_deserializer.cpp
   bootstrap/bootstrap_attempt.hpp
@@ -206,6 +204,7 @@ target_link_libraries(
   node
   nano_lib
   nano_store
+  nano_bootstrap_weights
   secure
   rpc
   libminiupnpc-static
