--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(
   optimistic_scheduler.cpp
   processing_queue.cpp
   processor_service.cpp
+  rate_limiting.cpp
   rep_crawler.cpp
   receivable.cpp
   peer_history.cpp
