Move rate tests to a separate file
# Conflicts:
#	nano/core_test/CMakeLists.txt

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(
   processor_service.cpp
   random.cpp
   random_pool.cpp
+  rate_limiting.cpp
   rep_crawler.cpp
   receivable.cpp
   peer_history.cpp
