--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -699,6 +699,7 @@ add_subdirectory(nano/store)
 target_include_directories(nano_store PUBLIC ${BOOST_LIBRARY_INCLUDES})
 target_include_directories(nano_store PUBLIC submodules)
 add_subdirectory(nano/lib)
+add_subdirectory(nano/consensus)
 add_subdirectory(nano/node)
 add_subdirectory(nano/nano_node)
 add_subdirectory(nano/rpc)
