Move network_constants to constants.hpp

--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -39,6 +39,8 @@ add_library(
   config.hpp
   config.cpp
   configbase.hpp
+  constants.hpp
+  constants.cpp
   container_info.hpp
   container_info.cpp
   diagnosticsconfig.hpp
